Actions: Front Nginx

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,11 @@
     "reactstrap": "^9.1.5",
     "web-vitals": "^2.1.4"
   },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!(axios)/)"
+    ]
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
